OllyTiper.2.0/OllyTiper/Plugin.h


typedef unsigned char  uchar;          
typedef unsigned long  ulong;          
#define NBAR           17              
#define CAPT_FREE      0               
#define TABLE_COLSEL   0x1000          
typedef struct t_scheme {              
  char           *name;                
  int            textcolor;            
  int            hitextcolor;          
  int            lowcolor;             
  int            bkcolor;              
  int            selbkcolor;           
  int            linecolor;            
  int            auxcolor;             
  int            condbkcolor;          
} t_scheme;
typedef struct t_schemeopt {           
  char           *name;                
  int            color[8];             
} t_schemeopt;
typedef struct t_bar {
  int            nbar;                 
  int            font;                 
  int            dx[NBAR];             
  int            defdx[NBAR];          
  char           *name[NBAR];          
  uchar          mode[NBAR];           
  int            captured;             
  int            active;               
  int            prevx;                
} t_bar;
typedef struct t_sortheader {          
  ulong          addr;                 
  ulong          size;                 
  ulong          type;                 
} t_sortheader;
typedef int  SORTFUNC(const t_sortheader *,const t_sortheader *,const int);
typedef int  DRAWFUNC(char *,char *,int *,t_sortheader *,int);
typedef void DESTFUNC(t_sortheader *);
#define AUTOARRANGE    ((SORTFUNC *)1) 
typedef struct t_sorted {              
  char           name[MAX_PATH];       
  int            n;                    
  int            nmax;                 
  int            selected;             
  ulong          seladdr;              
  int            itemsize;             
  ulong          version;              
  void           *data;                
  SORTFUNC       *sortfunc;            
  DESTFUNC       *destfunc;            
  int            sort;                 
  int            sorted;               
  int            *index;               
  int            suppresserr;          
} t_sorted;
typedef struct t_table {               
  HWND           hw;                   
  t_sorted       data;                 
  t_bar          bar;                  
  int            showbar;              
  short          hscroll;              
  short          colsel;               
  int            mode;                 
  int            font;                 
  short          scheme;               
  short          hilite;               
  int            offset;               
  int            xshift;               
  DRAWFUNC       *drawfunc;            
} t_table;
extc int     cdecl Createsorteddata(t_sorted *sd,char *name,int itemsize,
               int nmax,SORTFUNC *sortfunc,DESTFUNC *destfunc);
extc void    cdecl Destroysorteddata(t_sorted *sd);
extc void    cdecl *Addsorteddata(t_sorted *sd,void *item);
extc void    cdecl Deletesorteddata(t_sorted *sd,ulong addr);
extc void    cdecl Deletesorteddatarange(t_sorted *sd,ulong addr0,ulong addr1);
extc int     cdecl Deletenonconfirmedsorteddata(t_sorted *sd);
extc void*   cdecl Findsorteddata(t_sorted *sd,ulong addr);
extc void*   cdecl Findsorteddatarange(t_sorted *sd,ulong addr0,ulong addr1);
extc int     cdecl Findsorteddataindex(t_sorted *sd,ulong addr0,ulong addr1);
extc int     cdecl Sortsorteddata(t_sorted *sd,int sort);
extc void*   cdecl Getsortedbyselection(t_sorted *sd,int index);
extc void    cdecl Defaultbar(t_bar *pb);
extc int     cdecl Tablefunction(t_table *pt,
               HWND hw,UINT msg,WPARAM wp,LPARAM lp);
extc void    cdecl Painttable(HWND hw,t_table *pt,DRAWFUNC getline);
extc int     cdecl Gettableselectionxy(t_table *pt,int column,int *px,int *py);
extc void    cdecl Selectandscroll(t_table *pt,int index,int mode);
#define NM_NONAME      0x00            
#define NM_ANYNAME     0xFF            
#define NM_PLUGCMD     0x30            
#define NM_LABEL       0x31            
#define NM_EXPORT      0x32            
#define NM_IMPORT      0x33            
#define NM_LIBRARY     0x34            
#define NM_CONST       0x35            
#define NM_COMMENT     0x36            
#define NM_LIBCOMM     0x37            
#define NM_BREAK       0x38            
#define NM_ARG         0x39            
#define NM_ANALYSE     0x3A            
#define NM_BREAKEXPR   0x3B            
#define NM_BREAKEXPL   0x3C            
#define NM_ASSUME      0x3D            
#define NM_STRUCT      0x3E            
#define NM_CASE        0x3F            
#define NM_INSPECT     0x40            
#define NM_WATCH       0x41            
#define NM_ASM         0x42            
#define NM_FINDASM     0x43            
#define NM_LASTWATCH   0x48            
#define NM_SOURCE      0x49            
#define NM_REFTXT      0x4A            
#define NM_GOTO        0x4B            
#define NM_GOTODUMP    0x4C            
#define NM_TRPAUSE     0x4D            
#define NM_IMCALL      0xFE            
#define NMHISTORY      0x40            
extc int     cdecl Insertname(ulong addr,int type,char *name);
extc int     cdecl Quickinsertname(ulong addr,int type,char *name);
extc void    cdecl Mergequicknames(void);
extc void    cdecl Discardquicknames(void);
extc int     cdecl Findname(ulong addr,int type,char *name);
extc int     cdecl Decodename(ulong addr,int type,char *name);
extc ulong   cdecl Findnextname(char *name);
extc int     cdecl Findlabel(ulong addr,char *name);
extc void    cdecl Deletenamerange(ulong addr0,ulong addr1,int type);
extc int     cdecl Findlabelbyname(char *name,ulong *addr,
               ulong addr0,ulong addr1);
extc ulong   cdecl Findimportbyname(char *name,ulong addr0,ulong addr1);
extc int     cdecl Demanglename(char *name,int type,char *undecorated);
extc int     cdecl Findsymbolicname(ulong addr,char *fname);
#define REG_EAX        0               
#define REG_ECX        1               
#define REG_EDX        2
#define REG_EBX        3
#define REG_ESP        4
#define REG_EBP        5
#define REG_ESI        6
#define REG_EDI        7
#define SEG_UNDEF     -1
#define SEG_ES         0               
#define SEG_CS         1               
#define SEG_SS         2
#define SEG_DS         3
#define SEG_FS         4
#define SEG_GS         5
#define RS_NONE        0x0000          
#define RS_INT         0x0010          
#define RS_EIP         0x0020          
#define RS_FLG         0x0030          
#define RS_SEG         0x0040          
#define RS_EFL         0x0050          
#define RS_TAG         0x0060          
#define RS_FPU         0x0070          
#define RS_FST         0x0080          
#define RS_FCO         0x0090          
#define RS_FER         0x00A0          
#define RS_FCW         0x00B0          
#define RS_FPR         0x00C0          
#define RS_FEM         0x00D0          
#define RS_MMX         0x00E0          
#define RS_3DN         0x00F0          
#define RS_SSE         0x0100          
#define RS_CSR         0x0110          
#define RS_CSB         0x0120          
#define RS_CPR         0x0130          
#define RS_ERR         0x0140          
#define RS_GROUP       0x01F0          
#define RS_INDEX       0x000F          
#define NREGSTACK      32              
#define MAXCALSIZE     8               
#define NREGSTACK      32              
typedef struct t_reg {                 
  int            modified;             
  int            modifiedbyuser;       
  int            singlestep;           
  ulong          r[8];                 
  ulong          ip;                   
  ulong          flags;                
  int            top;                  
  long double    f[8];                 
  char           tag[8];               
  ulong          fst;                  
  ulong          fcw;                  
  ulong          s[6];                 
  ulong          base[6];              
  ulong          limit[6];             
  char           big[6];               
  ulong          dr6;                  
  ulong          threadid;             
  ulong          lasterror;            
  int            ssevalid;             
  int            ssemodified;          
  char           ssereg[8][16];        
  ulong          mxcsr;                
  int            selected;             
  ulong          drlin[4];             
  ulong          dr7;                  
} t_reg;
typedef struct t_result {              
  int            type;                 
  int            dtype;                
  union {
    uchar        data[10];             
    ulong        u;                    
    long         l;                    
    long double  f; };                 
  union {
    char         value[TEXTLEN];       
    wchar_t      wvalue[TEXTLEN/2]; }; 
  ulong          lvaddr;               
} t_result;
extc int     cdecl Expression(t_result *result,char *expression,int a,int b,
               uchar *data,ulong database,ulong datasize,ulong threadid);